<resources>
    <string name="app_name">BookingPlus</string>
    <string name="login">Login</string>
    <string name="app_logo">App Logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="welcome_text">Welcome to Booking +</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create a new account : Booking +</string>
    <string name="already_account">Already Have an Account</string>
    <string name="save_vehicle">Save Vehicle</string>
    <string name="rent_per_day">Rent per Day</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="vehicle_name">Vehicle Name</string>
</resources>