<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".AddVehicleActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <EditText
            android:id="@+id/etVehicleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="vehicle_name"
            android:hint="@string/vehicle_name"
            android:inputType="textAutoComplete" />

        <EditText
            android:id="@+id/etVehicleType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="vehicle_type"
            android:hint="@string/vehicle_type"
            android:inputType="textAutoComplete" />

        <EditText
            android:id="@+id/etRent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="rent_per_day"
            android:hint="@string/rent_per_day"
            android:inputType="numberDecimal"/>

        <Button
            android:id="@+id/btnSaveVehicle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_vehicle" />

    </LinearLayout>
</ScrollView>